--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </a>
             <ul>
                 <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
