--- a/index.html
+++ b/index.html
@@ -7,102 +7,120 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Effective Solution for Your Business">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/style.css">
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">
-                WebStudio
+    <header class="header">
+        <nav class="header-nav">
+            <a class="header-logo link" href="./index.html">
+                <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
             </a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <ul class="header-nav-list">
+                <li class="header-nav-item"><a class="header-nav-link link" href="">Studio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="header-contact-list">
+                <li class="header-contact-item"><a class="header-contact-link link"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-contact-item"><a class="header-contact-link link " href="tel:+110001111111">+11 (000)
+                        111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
         <!-- Hero section -->
-        <section>
-            <h1>Effective Solutions
+        <section class="section hero">
+            <h1 class="title">Effective Solutions
                 for Your Business
             </h1>
-            <button type="button">Order Service</button>
+            <button class="hero-btn" type="button">Order Service</button>
         </section>
         <!-- Features section -->
-        <section>
+        <section class="section features">
             <h2 hidden> Our advatges</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+            <ul class="features-list">
+                <li class="features-item">
+                    <h3 class="undertitle">Strategy</h3>
+                    <p class="features-description">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                <li class="features-item">
+                    <h3 class="undertitle">Punctuality</h3>
+                    <p class="features-description">Bring the key message to the brand's audience for the best price
+                        within the shortest possible
                         time.
                     </p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                <li class="features-item">
+                    <h3 class="undertitle">Diligence</h3>
+                    <p class="features-description">Research and confirm brands that present the strongest digital
+                        growth opportunities and minimize
                         risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.
+                <li class="features-item">
+                    <h3 class="undertitle">Technologies</h3>
+                    <p class="features-description">Design practice focused on digital experiences. We bring forth a
+                        deep passion for problem-solving.
                     </p>
                 </li>
             </ul>
         </section>
         <!-- Areas of Action section -->
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
-                <li><img src="./images/areas-actions-section/desktop.jpg" alt="desktop" width="360"></li>
-                <li><img src="./images/areas-actions-section/smartphone.jpg" alt="smartphone" width="360"></li>
-                <li><img src="./images/areas-actions-section/notebook-smartphone.jpg" alt="notebook-smartphone"
-                        width="360"></li>
+        <section class="section action">
+            <h2 class="section-title">What are we doing</h2>
+            <ul class="action-list">
+                <li class="action-item">
+                    <img class="action-img" src="./images/areas-actions-section/desktop.jpg" alt="desktop" width="360">
+                </li>
+                <li class="action-item">
+                    <img class="action-img" src="./images/areas-actions-section/smartphone.jpg" alt="smartphone"
+                        width="360">
+                </li>
+                <li class="action-item">
+                    <img class="action-img" src="./images/areas-actions-section/notebook-smartphone.jpg"
+                        alt="notebook-smartphone" width="360">
+                </li>
             </ul>
         </section>
         <!-- Team section -->
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li><img src="./images/team-section/mark-guerrero.jpg" alt="mark-guerrero" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+        <section class="section team">
+            <h2 class="section-title">Our Team</h2>
+            <ul class="team-list">
+                <li class="team-iteam"><img class="team-img" src="./images/team-section/mark-guerrero.jpg"
+                        alt="mark-guerrero" width="264">
+                    <h3 class="undertitle">Mark Guerrero</h3>
+                    <p class="team-description">Product Designer</p>
                 </li>
-                <li><img src="./images/team-section/tom-ford.jpg" alt="tom-ford" width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                <li class="team-iteam"><img class="team-img" src="./images/team-section/tom-ford.jpg" alt="tom-ford"
+                        width="264">
+                    <h3 class="undertitle">Tom Ford</h3>
+                    <p class="team-description">Frontend Developer</p>
                 </li>
-                <li><img src="./images/team-section/camila-garcia.jpg" alt="camila-garcia" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                <li class="team-iteam"><img class="team-img" src="./images/team-section/camila-garcia.jpg"
+                        alt="camila-garcia" width="264">
+                    <h3 class="team-undertitle">Camila Garcia</h3>
+                    <p class="description">Marketing</p>
                 </li>
-                <li><img src="./images/team-section/daniel-wilson.jpg" alt="daniel-wilson" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                <li class="team-iteam"><img class="team-img" src="./images/team-section/daniel-wilson.jpg"
+                        alt="daniel-wilson" width="264">
+                    <h3 class="undertitle">Daniel Wilson</h3>
+                    <p class="team-description">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="section footer">
         <!-- Logo -->
-        <a href="./index.html">
-            WebStudio
+        <a class="footer-logo link" href="./index.html">
+            <span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span>
         </a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </a>
+        <p class="foototer-description">Increase the flow of customers and sales for your business with digital
+            marketing & growth solutions.</p>
     </footer>
 </body>
 
