--- a/portfolio.html
+++ b/portfolio.html
@@ -6,30 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Effective Solution for Your Business">
-    <title>WebStudio</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/style.css">
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">
-                WebStudio
-            </a>
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+    <nav class="header-nav">
+        <a class="header-logo link" href="./index.html">
+            <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+        </a>
+        <ul class="header-nav-list">
+            <li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Studio</a></li>
+            <li class="header-nav-item"><a class="header-nav-link link" href="">Portfolio</a></li>
+            <li class="header-nav-item"><a class="header-nav-link link" href="">Contacts</a></li>
+        </ul>
+    </nav>
+    <address>
+        <ul class="header-contact-list">
+            <li class="header-contact-item"><a class="header-contact-link link"
+                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-contact-item"><a class="header-contact-link link " href="tel:+110001111111">+11 (000)
+                    111-11-11</a></li>
+        </ul>
+    </address>
     </header>
     <main>
         <!-- Filter -->
-        <section>
+        <section class="section">
             <h1 hidden>Filters
             </h1>
             <ul>
@@ -41,69 +43,70 @@
             </ul>
         </section>
         <!-- Section 2 -->
-        <section>
+        <section class="section">
             <h2 hidden>Section 2</h2>
             <ul>
                 <li>
-                    <img src="./images/portfolio/banking app.jpg" alt="banking app" width="360" height="300">
-                    <h3>Banking App Interface Concept</h3>
+                    <img src="./images/portfolio/banking-app.jpg" alt="banking app" width="360" height="300">
+                    <h3 class="undertitle">Banking App Interface Concept</h3>
                     <p>App</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/cashless payment.jpg" alt="cashless payment" width="360" height="300">
-                    <h3>Cashless Payment</h3>
+                    <img src="./images/portfolio/cashless-payment.jpg" alt="cashless payment" width="360" height="300">
+                    <h3 class="undertitle">Cashless Payment</h3>
                     <p>Marketing
                     </p>
                 </li>
                 <li>
                     <img src="./images/portfolio/meditation.jpg" alt="meditation" width="360" height="300">
-                    <h3>Meditation App</h3>
+                    <h3 class="undertitle">Meditation App</h3>
                     <p>App</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/taxi service.jpg" alt="taxi service" width="360" height="300">
-                    <h3>Taxi Service</h3>
+                    <img src="./images/portfolio/taxi-service.jpg" alt="taxi service" width="360" height="300">
+                    <h3 class="undertitle">Taxi Service</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/screen illustrations.jpg" alt="screen illustrations" width="360"
+                    <img src="./images/portfolio/screen-illustrations.jpg" alt="screen illustrations" width="360"
                         height="300">
-                    <h3>Screen Illustrations</h3>
+                    <h3 class="undertitle">Screen Illustrations</h3>
                     <p>Design
                     </p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/online courses.jpg" alt="online courses" width="360" height="300">
-                    <h3>Online Courses</h3>
+                    <img src="./images/portfolio/online-courses.jpg" alt="online courses" width="360" height="300">
+                    <h3 class="undertitle">Online Courses</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/instagram stories.jpg" alt="instagram stories" width="360"
+                    <img src="./images/portfolio/instagram-stories.jpg" alt="instagram stories" width="360"
                         height="300">
-                    <h3>Instagram Stories Concept</h3>
+                    <h3 class="undertitle">Instagram Stories Concept</h3>
                     <p>Design</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/organic food.jpg" alt="organic food" width="360" height="300">
-                    <h3>Organic Food</h3>
+                    <img src="./images/portfolio/organic-food.jpg" alt="organic food" width="360" height="300">
+                    <h3 class="undertitle">Organic Food</h3>
                     <p>Web Site
                     </p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/fresh coffee.jpg" alt="fresh coffee" width="360" height="300">
-                    <h3>Fresh Coffee</h3>
+                    <img src="./images/portfolio/fresh-coffee.jpg" alt="fresh coffee" width="360" height="300">
+                    <h3 class="undertitle">Fresh Coffee</h3>
                     <p>Web Site</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
         <!-- Logo -->
-        <a href="./index.html">
-            WebStudio
+        <a class="footer-logo link" href="./index.html">
+            <span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span>
         </a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="foototer-description">Increase the flow of customers and sales for your business with digital
+            marketing & growth solutions.</p>
     </footer>
 </body>
 
