--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Effective Solution for Your Business">
     <title>WebStudio</title>
+    <!-- Fonts styles -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <!-- Custom styles -->
     <link rel="stylesheet" href="./css/style.css">
 
 <body>
@@ -15,14 +27,14 @@
             <a class="header-logo link" href="./index.html">
                 <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
             </a>
-            <ul class="header-nav-list">
+            <ul class="header-nav-list list">
                 <li class="header-nav-item"><a class="header-nav-link link" href="">Studio</a></li>
                 <li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html">Portfolio</a></li>
                 <li class="header-nav-item"><a class="header-nav-link link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
-            <ul class="header-contact-list">
+            <ul class="header-contact-list list">
                 <li class="header-contact-item"><a class="header-contact-link link"
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="header-contact-item"><a class="header-contact-link link " href="tel:+110001111111">+11 (000)
@@ -41,7 +53,7 @@
         <!-- Features section -->
         <section class="section features">
             <h2 hidden> Our advatges</h2>
-            <ul class="features-list">
+            <ul class="features-list list">
                 <li class="features-item">
                     <h3 class="undertitle">Strategy</h3>
                     <p class="features-description">Our goal is to identify the business
@@ -71,7 +83,7 @@
         <!-- Areas of Action section -->
         <section class="section action">
             <h2 class="section-title">What are we doing</h2>
-            <ul class="action-list">
+            <ul class="action-list list">
                 <li class="action-item">
                     <img class="action-img" src="./images/areas-actions-section/desktop.jpg" alt="desktop" width="360">
                 </li>
@@ -88,7 +100,7 @@
         <!-- Team section -->
         <section class="section team">
             <h2 class="section-title">Our Team</h2>
-            <ul class="team-list">
+            <ul class="team-list list">
                 <li class="team-iteam"><img class="team-img" src="./images/team-section/mark-guerrero.jpg"
                         alt="mark-guerrero" width="264">
                     <h3 class="undertitle">Mark Guerrero</h3>
