--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Effective Solution for Your Business">
     <title>Portfolio</title>
+    <!-- Fonts styles -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <!-- Custom styles -->
     <link rel="stylesheet" href="./css/style.css">
 
 <body>
@@ -14,14 +31,14 @@
         <a class="header-logo link" href="./index.html">
             <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
         </a>
-        <ul class="header-nav-list">
+        <ul class="header-nav-list list">
             <li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Studio</a></li>
             <li class="header-nav-item"><a class="header-nav-link link" href="">Portfolio</a></li>
             <li class="header-nav-item"><a class="header-nav-link link" href="">Contacts</a></li>
         </ul>
     </nav>
     <address>
-        <ul class="header-contact-list">
+        <ul class="header-contact-list list">
             <li class="header-contact-item"><a class="header-contact-link link"
                     href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li class="header-contact-item"><a class="header-contact-link link " href="tel:+110001111111">+11 (000)
@@ -34,7 +51,7 @@
         <section class="section">
             <h1 hidden>Filters
             </h1>
-            <ul>
+            <ul class="filters-list list">
                 <li><button type="button">All</button></li>
                 <li><button type="button">Web Site</button></li>
                 <li><button type="button">App</button></li>
@@ -43,9 +60,9 @@
             </ul>
         </section>
         <!-- Section 2 -->
-        <section class="section">
-            <h2 hidden>Section 2</h2>
-            <ul>
+        <section class="section-works">
+            <h2 hidden>Services</h2>
+            <ul class="works-list list">
                 <li>
                     <img src="./images/portfolio/banking-app.jpg" alt="banking app" width="360" height="300">
                     <h3 class="undertitle">Banking App Interface Concept</h3>
