--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a class="header-logo link" href="./index.html">
-                <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+            <a class="header-logo" href="./index.html">Web
+                <span class="logo-studio">Studio</span>
             </a>
             <ul class="header-nav-list list">
                 <li class="header-nav-item"><a class="header-nav-link link" href="">Studio</a></li>
