--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
 
 <body>
     <nav class="header-nav">
-        <a class="header-logo link" href="./index.html">
+        <a class="header-logo-link" href="./index.html">
             <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
         </a>
         <ul class="header-nav-list list">
