--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a class="header-logo" href="./index.html">Web
-                <span class="logo-studio">Studio</span>
+            <a class="header-logo link" href="./index.html">Web
+                <span class="logo-span">Studio</span>
             </a>
             <ul class="header-nav-list list">
-                <li class="header-nav-item"><a class="header-nav-link link" href="">Studio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Studio</a></li>
                 <li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html">Portfolio</a></li>
                 <li class="header-nav-item"><a class="header-nav-link link" href="">Contacts</a></li>
             </ul>
