--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li class="header-nav-item"><a class="header-nav-link link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="header-address">
             <ul class="header-contact-list list">
                 <li class="header-contact-item"><a class="header-contact-link link"
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
