--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li class="header-nav-item"><a class="header-nav-link link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="header-address">
+        <address class="header-contact-list">
             <ul class="header-contact-list list">
                 <li class="header-contact-item"><a class="header-contact-link link"
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -45,7 +45,7 @@
     <main>
         <!-- Hero section -->
         <section class="section hero">
-            <h1 class="title">Effective Solutions
+            <h1> Effective Solutions
                 for Your Business
             </h1>
             <button class="hero-btn" type="button">Order Service</button>
