--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     <main>
         <!-- Filter -->
         <section class="section">
-            <h1 hidden>Filters
+            <h1 class="title" hidden>Filters
             </h1>
             <ul class="filters-list list">
                 <li><button type="button">All</button></li>
