--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
         <!-- Hero section -->
         <section class="section hero">
-            <h1> Effective Solutions
+            <h1 class="title"> Effective Solutions
                 for Your Business
             </h1>
             <button class="hero-btn" type="button">Order Service</button>
