--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
         </section>
         <!-- Section 2 -->
         <section class="section-works">
-            <h2 hidden>Services</h2>
+            <h2 class="section-title" hidden>Services</h2>
             <ul class="works-list list">
                 <li>
                     <img src="./images/portfolio/banking-app.jpg" alt="banking app" width="360" height="300">
