--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
         <!-- Features section -->
         <section class="section features">
-            <h2 hidden> Our advatges</h2>
+            <h2 class="section-title" hidden> Our advatges</h2>
             <ul class="features-list list">
                 <li class="features-item">
                     <h3 class="undertitle">Strategy</h3>
