--- a/index.html
+++ b/index.html
@@ -101,22 +101,22 @@
         <section class="section team">
             <h2 class="section-title">Our Team</h2>
             <ul class="team-list list">
-                <li class="team-iteam"><img class="team-img" src="./images/team-section/mark-guerrero.jpg"
+                <li class="team-item"><img class="team-img" src="./images/team-section/mark-guerrero.jpg"
                         alt="mark-guerrero" width="264">
                     <h3 class="undertitle">Mark Guerrero</h3>
                     <p class="team-description">Product Designer</p>
                 </li>
-                <li class="team-iteam"><img class="team-img" src="./images/team-section/tom-ford.jpg" alt="tom-ford"
+                <li class="team-item"><img class="team-img" src="./images/team-section/tom-ford.jpg" alt="tom-ford"
                         width="264">
                     <h3 class="undertitle">Tom Ford</h3>
                     <p class="team-description">Frontend Developer</p>
                 </li>
-                <li class="team-iteam"><img class="team-img" src="./images/team-section/camila-garcia.jpg"
+                <li class="team-item"><img class="team-img" src="./images/team-section/camila-garcia.jpg"
                         alt="camila-garcia" width="264">
                     <h3 class="team-undertitle">Camila Garcia</h3>
                     <p class="description">Marketing</p>
                 </li>
-                <li class="team-iteam"><img class="team-img" src="./images/team-section/daniel-wilson.jpg"
+                <li class="team-item"><img class="team-img" src="./images/team-section/daniel-wilson.jpg"
                         alt="daniel-wilson" width="264">
                     <h3 class="undertitle">Daniel Wilson</h3>
                     <p class="team-description">UI Designer</p>
