--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 </li>
                 <li class="team-item"><img class="team-img" src="./images/team-section/camila-garcia.jpg"
                         alt="camila-garcia" width="264">
-                    <h3 class="team-undertitle">Camila Garcia</h3>
-                    <p class="description">Marketing</p>
+                    <h3 class="undertitle">Camila Garcia</h3>
+                    <p class="team-description">Marketing</p>
                 </li>
                 <li class="team-item"><img class="team-img" src="./images/team-section/daniel-wilson.jpg"
                         alt="daniel-wilson" width="264">
