--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
     <!-- Footer -->
     <footer class="section footer">
         <!-- Logo -->
-        <a class="footer-logo link" href="./index.html">
-            <span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span>
+        <a class="footer-logo link" href="./index.html">Web
+            <span class="footer-logo-span">Studio</span>
         </a>
         <p class="foototer-description">Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.</p>
