--- a/portfolio.html
+++ b/portfolio.html
@@ -119,8 +119,8 @@
     <!-- Footer -->
     <footer class="footer">
         <!-- Logo -->
-        <a class="footer-logo link" href="./index.html">
-            <span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span>
+        <a class="footer-logo-link" href="./index.html">
+            <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
         </a>
         <p class="foototer-description">Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.</p>
