--- a/portfolio.html
+++ b/portfolio.html
@@ -27,24 +27,25 @@
     <link rel="stylesheet" href="./css/style.css">
 
 <body>
-    <nav class="header-nav">
-        <a class="header-logo-link" href="./index.html">
-            <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-        </a>
-        <ul class="header-nav-list list">
-            <li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Studio</a></li>
-            <li class="header-nav-item"><a class="header-nav-link link" href="">Portfolio</a></li>
-            <li class="header-nav-item"><a class="header-nav-link link" href="">Contacts</a></li>
-        </ul>
-    </nav>
-    <address>
-        <ul class="header-contact-list list">
-            <li class="header-contact-item"><a class="header-contact-link link"
-                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-contact-item"><a class="header-contact-link link " href="tel:+110001111111">+11 (000)
-                    111-11-11</a></li>
-        </ul>
-    </address>
+    <header class="header">
+        <nav class="header-nav">
+            <a class="header-logo-link" href="./index.html">
+                <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+            </a>
+            <ul class="header-nav-list list">
+                <li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Studio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link link" href="">Portfolio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link link" href="">Contacts</a></li>
+            </ul>
+        </nav>
+        <address>
+            <ul class="header-contact-list list">
+                <li class="header-contact-item"><a class="header-contact-link link"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-contact-item"><a class="header-contact-link link " href="tel:+110001111111">+11 (000)
+                        111-11-11</a></li>
+            </ul>
+        </address>
     </header>
     <main>
         <!-- Filter -->
