--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
             </a>
             <ul class="header-nav-list list">
                 <li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Studio</a></li>
-                <li class="header-nav-item"><a class="header-nav-link link" href="">Portfolio</a></li>
+                <li class="header-nav-item"><a class="header-nav-link link" href="./portfolio.html">Portfolio</a></li>
                 <li class="header-nav-item"><a class="header-nav-link link" href="">Contacts</a></li>
             </ul>
         </nav>
