--- a/portfolio.html
+++ b/portfolio.html
@@ -29,8 +29,8 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a class="header-logo-link" href="./index.html">
-                <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+            <a class="header-logo link" href="./index.html">Web
+                <span class="logo-span">Studio</span>
             </a>
             <ul class="header-nav-list list">
                 <li class="header-nav-item"><a class="header-nav-link link" href="./index.html">Studio</a></li>
@@ -120,8 +120,8 @@
     <!-- Footer -->
     <footer class="footer">
         <!-- Logo -->
-        <a class="footer-logo-link" href="./index.html">
-            <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+        <a class="footer-logo link" href="./index.html">Web
+            <span class="footer-logo-span">Studio</span>
         </a>
         <p class="foototer-description">Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.</p>
