--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
                 <li class="header-nav-item"><a class="header-nav-link link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="header-contact-list">
             <ul class="header-contact-list list">
                 <li class="header-contact-item"><a class="header-contact-link link"
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
