--- a/portfolio.html
+++ b/portfolio.html
@@ -53,11 +53,11 @@
             <h1 class="title" hidden>Filters
             </h1>
             <ul class="filters-list list">
-                <li><button type="button">All</button></li>
-                <li><button type="button">Web Site</button></li>
-                <li><button type="button">App</button></li>
-                <li><button type="button">Design</button></li>
-                <li><button type="button">Marketing</button></li>
+                <li><button class="filters-btn" type="button">All</button></li>
+                <li><button class="filters-btn" type="button">Web Site</button></li>
+                <li><button class="filters-btn" type="button">App</button></li>
+                <li><button class="filters-btn" type="button">Design</button></li>
+                <li><button class="filters-btn" type="button">Marketing</button></li>
             </ul>
             <h2 class="section-title" hidden>Services</h2>
             <ul class="works-list list">
