--- a/portfolio.html
+++ b/portfolio.html
@@ -67,65 +67,66 @@
                         <p>App</p>
                     </a>
                 </li>
-                <li class="work-list-item"></li>>
-                <a href="" class="work-list-item link">
-                    <img src="./images/portfolio/cashless-payment.jpg" alt="cashless payment" width="360" height="300">
-                    <h2 class="undertitle">Cashless Payment</h2>
-                    <p class="work-list-filters">Marketing</p>
-                </a>
+                <li class="work-list-item">
+                    <a href="" class="work-list-item link">
+                        <img src="./images/portfolio/cashless-payment.jpg" alt="cashless payment" width="360"
+                            height="300">
+                        <h2 class="undertitle">Cashless Payment</h2>
+                        <p class="work-list-filters">Marketing</p>
+                    </a>
                 </li>
-                <li class="work-list-item"></li>>
-                <a href="" class="work-list-item link">
-                    <img src="./images/portfolio/meditation.jpg" alt="meditation" width="360" height="300">
-                    <h2 class="undertitle">Meditation App</h2>
-                    <p class="work-list-filters">App</p>
-                </a>
+                <li class="work-list-item">
+                    <a href="" class="work-list-item link">
+                        <img src="./images/portfolio/meditation.jpg" alt="meditation" width="360" height="300">
+                        <h2 class="undertitle">Meditation App</h2>
+                        <p class="work-list-filters">App</p>
+                    </a>
                 </li>
-                <li class="work-list-item"></li>>
-                <a href="" class="work-list-item link">
-                    <img src="./images/portfolio/taxi-service.jpg" alt="taxi service" width="360" height="300">
-                    <h2 class="undertitle">Taxi Service</h2>
-                    <p class="work-list-filters">Marketing</p>
-                </a>
+                <li class="work-list-item">
+                    <a href="" class="work-list-item link">
+                        <img src="./images/portfolio/taxi-service.jpg" alt="taxi service" width="360" height="300">
+                        <h2 class="undertitle">Taxi Service</h2>
+                        <p class="work-list-filters">Marketing</p>
+                    </a>
                 </li>
-                <li class="work-list-item"></li>>
-                <a href="" class="work-list-item link">
-                    <img src="./images/portfolio/screen-illustrations.jpg" alt="screen illustrations" width="360"
-                        height="300">
-                    <h2 class="undertitle">Screen Illustrations</h2>
-                    <p class="work-list-filters">Design
-                    </p>
-                </a>
+                <li class="work-list-item">
+                    <a href="" class="work-list-item link">
+                        <img src="./images/portfolio/screen-illustrations.jpg" alt="screen illustrations" width="360"
+                            height="300">
+                        <h2 class="undertitle">Screen Illustrations</h2>
+                        <p class="work-list-filters">Design
+                        </p>
+                    </a>
                 </li>
-                <li class="work-list-item"></li>>
-                <a href="" class="work-list-item link">
-                    <img src="./images/portfolio/online-courses.jpg" alt="online courses" width="360" height="300">
-                    <h2 class="undertitle">Online Courses</h2>
-                    <p class="work-list-filters">Marketing</p>
-                </a>
+                <li class="work-list-item">
+                    <a href="" class="work-list-item link">
+                        <img src="./images/portfolio/online-courses.jpg" alt="online courses" width="360" height="300">
+                        <h2 class="undertitle">Online Courses</h2>
+                        <p class="work-list-filters">Marketing</p>
+                    </a>
                 </li>
-                <li class="work-list-item"></li>>
-                <a href="" class="work-list-item link">
-                    <img src="./images/portfolio/instagram-stories.jpg" alt="instagram stories" width="360"
-                        height="300">
-                    <h2 class="undertitle">Instagram Stories Concept</h2>
-                    <p class="work-list-filters">Design</p>
-                </a>
+                <li class="work-list-item">
+                    <a href="" class="work-list-item link">
+                        <img src="./images/portfolio/instagram-stories.jpg" alt="instagram stories" width="360"
+                            height="300">
+                        <h2 class="undertitle">Instagram Stories Concept</h2>
+                        <p class="work-list-filters">Design</p>
+                    </a>
                 </li>
-                <li class="work-list-item"></li>>
-                <a href="" class="work-list-item link">
-                    <img src="./images/portfolio/organic-food.jpg" alt="organic food" width="360" height="300">
-                    <h2 class="undertitle">Organic Food</h2>
-                    <p class="work-list-filters">Web Site
-                    </p>
-                </a>
+                <li class="work-list-item">
+                    <a href="" class="work-list-item link">
+                        <img src="./images/portfolio/organic-food.jpg" alt="organic food" width="360" height="300">
+                        <h2 class="undertitle">Organic Food</h2>
+                        <p class="work-list-filters">Web Site
+                        </p>
+                    </a>
                 </li>
-                <li class="work-list-item"></li>>
-                <a href="" class="work-list-item link">
-                    <img src="./images/portfolio/fresh-coffee.jpg" alt="fresh coffee" width="360" height="300">
-                    <h2 class="undertitle">Fresh Coffee</h2>
-                    <p class="work-list-filters">Web Site</p>
-                </a>
+                <li class="work-list-item">
+                    <a href="" class="work-list-item link">
+                        <img src="./images/portfolio/fresh-coffee.jpg" alt="fresh coffee" width="360" height="300">
+                        <h2 class="undertitle">Fresh Coffee</h2>
+                        <p class="work-list-filters">Web Site</p>
+                    </a>
                 </li>
             </ul>
         </section>
